--- a/index.css
+++ b/index.css
@@ -1,45 +1,3 @@
-.header{
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid grey;
-}
-
-.logo-container > img{
-    width: 100px;
-}
-
-.nav-options > ul{
-    list-style: none;
-    display: flex;
-    font-size: larger;
-    margin-top: 40px;
-    margin-right: 50px;
-}
-
-.nav-options > ul > li{
-    margin: 0 20px;
-}
-
-.body{
-    margin: 5px;
-}
-
-.restaurant-container{
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.restaurant-card{
-    width: 250px;
-    transition-duration: 100ms;
-    margin: 20px 20px 0 0;
-}
-
-.restaurant-card:hover{
-    cursor: pointer;
-    border: 1px solid gray;
-}
-
-.restaurant-photo{
-    width: 100%;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
